@@ -1,6 +1,10 @@
 Contributors:
 
+Current -
 Chris Lyttle <chris@wilddev.net>
+Christian Stimmings <stimming@tuhh.de>
+
+Past -
 Carol Champagne <carol@io.com>
 Linas Vepstas <linas@linas.org>
 Christopher Browne <gnucash@cbbrowne.com>
