@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
     "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY chapter1 SYSTEM "chapter1.xml">
@@ -15,11 +15,61 @@
 <!ENTITY chapter12 SYSTEM "chapter12.xml">
 <!ENTITY chapter13 SYSTEM "chapter13.xml">
 <!ENTITY appendix SYSTEM "appendix.xml">
+<!ENTITY legal SYSTEM "legal.xml">
+<!ENTITY GFDL SYSTEM "fdl-appendix.xml">
+<!ENTITY appversion "1.7.6">
+<!ENTITY manrevision "1.7.6">
+<!ENTITY date "1st December 2002">
+<!ENTITY app "GnuCash">
 ]>
-<book id="index">
+<!--
+      (Do not remove this comment block.)
+  Template Maintained by the GNOME Documentation Project:
+	  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Feb 12, 2002
+-->
+<!--
+      (Do not remove this comment block.)
+  Version: 1.7.6
+  Last modified: Dec 22, 2002
+  Maintainers:
+               Chris Lyttle   <chris@wilddev.net)
+  Translators:
+               (translators put your name and email here)
+-->
+<book id="index" lang="en-US">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
  <bookinfo>
-  <title>GnuCash User Guide</title>
-  <edition>v1.6.5</edition>
+  <title>&app; Tutorial and Concepts Guide</title>
+  <edition>V&manrevision;</edition>
+
+  <copyright>
+   <year>2002</year>
+   <holder>Chris Lyttle</holder>
+  </copyright>
+  
+  <copyright>
+   <year>2001</year>
+   <holder>Carol Champagne and Chris Lyttle</holder>
+  </copyright>
+
+ <!-- translators: uncomment this:
+
+  <copyright>
+   <year>2000</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
+
+   -->
+
+    <publisher>
+       <publishername> GnuCash Documentation Team </publishername>
+    </publisher>
+
+    &legal;
+
   <authorgroup>
 
     <author>
@@ -35,44 +85,73 @@
     <author>
      <firstname>Chris</firstname>
      <surname>Lyttle</surname>
-     <authorblurb>
-      <para>
-       <email>chris@wilddev.net</email>
-      </para>
-     </authorblurb>
+     <affiliation>
+          <orgname>GnuCash Documentation Team</orgname>
+          <address> <email>chris@wilddev.net</email> </address>
+     </affiliation>
     </author>
+    
+<!-- This is appropriate place for other contributors: translators,
+      maintainers,  etc. Commented out by default.
+       <othercredit role="translator">
+        <firstname>Latin</firstname>
+        <surname>Translator 1</surname>
+        <affiliation>
+          <orgname>Latin Translation Team</orgname>
+          <address> <email>translator@gnome.org</email> </address>
+        </affiliation>
+        <contrib>Latin translation</contrib>
+      </othercredit>
+-->
 
   </authorgroup>
 
-  <copyright>
-   <year>2001</year>
-   <holder>Carol Champagne and Chris Lyttle</holder>
-  </copyright>
+  <revhistory>
+      <revision>
+        <revnumber>&app; Tutorial and Concepts Guide V&manrevision;</revnumber>
+        <date>&date;</date>
+        <revdescription>
+          <para role="author">Chris Lyttle
+            <email>chris@wilddev.net</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash User Guide V1.6.5</revnumber>
+        <date>June 2002</date>
+        <revdescription>
+          <para role="author">Chris Lyttle
+            <email>chris@wilddev.net</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash User Guide V1.6.0</revnumber>
+        <date>October 2001</date>
+        <revdescription>
+          <para role="author">Carol Champagne
+            <email>carol@io.com</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+    </revhistory>
 
- <!-- translators: uncomment this:
-
-  <copyright>
-   <year>2000</year>
-   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
-  </copyright>
-
-   -->
-
-  <legalnotice id="legalnotice">
-   <para>
-    Permission is granted to copy, distribute and/or modify this document under the terms of the <ulink type="help" url="gnome-help:fdl"><citetitle>GNU Free Documentation License</citetitle></ulink>, Version 1.1 or any later version published by the Free Software Foundation with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-A copy of this license was provided with this software in the file <filename>COPYING-DOCS</filename>.
-   </para>
-   <para>
-    Many of the names used by companies to distinguish their products and services are claimed as trademarks. Where those names appear in any GNOME documentation, and those trademarks are made aware to the members of the GNOME Documentation Project, the names have been printed in caps or initial caps.
-   </para>
-  </legalnotice>
-
-
-  <!-- this is the version of manual, not application --> 
   <releaseinfo>
-   This is version 1.6.5 of the GnuCash User Guide.
+   This Guide contains a tutorial for using GnuCash and describes the concepts
+   behind GnuCash.
   </releaseinfo>
+  <legalnotice>
+    <title>Feedback</title>
+      <para>To report a bug or make a suggestion regarding this package or
+        this manual, follow the directions at the
+        <ulink url="http://bugzilla.gnome.org"
+          >GNOME Bug Tracking System</ulink>.
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+  </legalnotice>
 
 </bookinfo>
 
