@@ -4,6 +4,7 @@ Version History
  1.7.6  - 15 December 2002
  	 o Skipped 1.7.5 to release same version number as gnucash
 	 o Added Guide from gnucash module
+	 o Added beginnings of German translation of gnucash-help
 	 o removed extra gnucsh-docs dir in help dir
 	 o added xsl stylesheets from gnome-docu, removed chunk.xsl
 	 o change xmldocs.make to use xsl dir stylesheets, generate filenames
