@@ -1,3 +1,9 @@
+2002-12-20  Chris Lyttle  <chris@wilddev.net>
+
+	* guide/C/gnucash-guide.xml: Updated author info
+	* NEWS: Actually do 1.7.6 release (tagged here)
+	* AUTHORS: added Christian Stimming
+
 2002-12-23  Christian Stimming  <stimming@tuhh.de>
 
 	* help/de_DE/*: Add files for German help translation, with *very*
